assets/css/main.css
/* ... */
*/

.authors img[src*="avatar"], .groups img[src*="avatar"] {
  background-color: var(--theme-main);
}



.author-delete {
  position: absolute;
  right: 0px;
  top: 0px;
  z-index: 200000000;
  height: 20px;
  height: 40px;
  width: 15px;
  cursor: pointer;
  display: flex;
  align-content: center;
  align-items: center;
  justify-content: center;
  display: none;
}
.author-delete:before {
  content: "\2718";
  color: #ff5858;
}
.author-delete:hover ~ .row {
  color: red;
  transition: color 0.3s;
}

.editing .author-delete {
  display: block;
}

.editing #authors .row, .editing #groups .row {
  cursor: move;
  transition: color 0.3s;
}

/*
#form-author-add > div > div {
    margin: 0;
}
#form-author-add > div > div input {
  height: 40px;
}
#form-author-add > div > div label {
      top: 10px;
}
*/

/*
.author-move:before {
  content: "\2630";
  position: absolute;
  right: 0px;
  top: 20px;
  color: #ABABAB;
  transform: scale(.5,1);
}
*/


.sidebar h1 {
  margin-bottom: 0;
  display: block;
}

.sidebar-button {
  border: 2px dotted rgba(0, 81, 255, 0.12);
  background-color: rgba(0, 81, 255, 0.12);
  color: rgb(160, 160, 160);
  text-align: center;
  cursor: pointer;
}
.sidebar h3 {
  font-size: 0.9rem;
  font-weight: 300;
  margin: 0 0 0.2rem 0;
  letter-spacing: 1px;
}
.sidebar .heading {
  display: block;
  line-height: 1.5rem;
  font-size: 0.9rem;
  font-weight: 300;
  margin: 0 0 0.2rem 0;
  letter-spacing: 1px;
}



#hero:not(.invisible) ~ .main .sidebar #icon {
  margin-top: -100px;
  border-radius: 5px;
  /*background-color: var(--theme-main);*/
}


.sidebar h4 {
  font-size: 1rem;
  margin-bottom: 0px;
}

.sidebar figcaption {
  display: none;
}

.sidebar .makers img {
  object-fit: none;
  align-self: flex-start;
  background-color: var(--theme-main);
}

.sidebar span {
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: .8rem;
  line-height: 1rem;
}
.sidebar .column {
  overflow: hidden;
  display: flex;
  justify-content: center;
  /*
  justify-content: center;
  -webkit-justify-content: center;
  */
  margin-left: .3rem;
}

.sidebar .makers > a {
  display: block;
  max-width: 100%;
}
.makers .column {
  min-width: 0;
}


.sidebar .row.indicator {
  border-left: 3px solid var(--theme-main);
  padding-left: 3px;
}
.sidebar span.indicator {
  color: var(--theme-main);
}



.sidebar .filter {
  font-size: .9rem;
}

.hours img {
  margin-right: auto;
  margin-left: initial;
}

.hours .day, .hours .hour {
  line-height: 1.4rem;
  font-size: .8rem;
}

.sidebar div .row {
  margin-bottom: 0.3rem;
}

.hours .day {
  border: 1px solid #E6E6E6;
  text-align: center;
  width: 50px;
  color: #BDBDBD;
  font-weight: 300;
  letter-spacing: 1px;
}

#currentday .day {
  color: #8E8E8E;
  background-color: #F4FBFF;
}

#currentday .hour {
  font-weight: bold;
}

.hours .hour {
  margin-left: 5px;
  margin-top: 1px;
}
#address {
  display: block;
  font-size: .8rem;
  white-space: pre-wrap;
  margin-top: .3rem;
}
.hours > span {
  /*
  display: inline-block;
  */
  display: block;
  /*
  text-overflow: ellipsis;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  margin-bottom: 0.3rem;
  */
}


.date {
  /*border: 1px solid #E6E6E6;*/
  /*text-align: center;*/
  /*width: 50px;*/
  color: #316790;
  font-weight: 300;
  /*letter-spacing: 1px;*/
  line-height: 1.4rem;
  font-size: .8rem;
}





/* SIDEBAR WIDGETS
-------------------------------------------------- */

#author-results, #group-results {
  position: absolute;
  background-color: white;
  z-index: 100 !important;
  width: 100%;
}

#author-results li, #group-results li {
  padding: 5px;
  border: 1px solid #d9d9d9;
  border-width: 0px 1px 1px 1px;
}
#author-results li:hover, #group-results li:hover {
  background-color: #d9d9d9;
  cursor: pointer;
}



article {
  flex-grow: 5 !important;
  flex: 2;
  position: relative;
  width: 100%;
  margin: 0 auto;
}


.sidebar {
  order: 1;
  flex: 0 0 14rem;
}

.sidebar ~ .content {
  margin-right: auto;
}
/*
.rightsidebar ~ .content {
  max-width: 700px;
}
*/
/*
article {
  max-width: 700px;
  max-width: 720px;
}
*/
/*
article ~ .cards {
  max-width: 700px;
}
*/

.content {
  max-width: 100%;
  flex: 1;
  order: 2;
}

.rightsidebar {
  max-width: 280px;
  order: 3;
}

/*
.sidebar ~ .content .cards, .sidebar ~ .content .cards-makers {
  max-width: 720px;
}
*/
.sidebar ~ .content .cards {
  max-width: 720px;
}


/*
[contenteditable]:empty:before {
  content: attr(placeholder);
  display: block;
  color: #ABABAB;
}
h1:empty:before {
  content: attr(placeholder);
  display: block;
  color: #ABABAB;
}
*/

p:empty:before {
  content: attr(placeholder);
  display: block;
  color: #ABABAB;
}

table {
  width: 100%;
  border-collapse: collapse;
  empty-cells: hide;
  margin-bottom: 1rem;
}

th {
  background: #EDF5FF;
  text-align: left;
}

th:empty {
  visibility: hidden;
}

td, th {
  border: solid 1px #ccc;
  padding: 6px;
  word-wrap: break-word;
}

/*
tbody th {
  text-align: left;
}
*/

tr:nth-of-type(odd) td {
  background: #F7F7F7;
}

.p {
  text-align: center;
  font-size: 13px;
  padding-top: 130px;
}

/* Flexbox Grid
-------------------------------------------------- */

/*
.toc-container {
  flex-grow: 1;
  min-width: 180px;
}
*/


.textbox {
  flex: 4;
  word-wrap: break-word;
  max-width: 720px;
}

article .text {
  max-width: 700px;  
  line-height: 1.625rem;
}
.sidebar ~ article {
  margin: initial;
}
/*
.sidebar ~ article .cards {
  max-width: 700px;
}
*/
article h1 {
  /*
  max-width: 700px;
  */
}

.size-85 {
  width: 85%;
  margin: initial;
  margin-left: auto;
}

.size-50 {
  width: 49%;
}
.size-half {
  width: 49%;
}
.size-two-thirds {
  width: 64%;
}
.size-67 {
  width: 64%;
}
.size-one-third {
  width: 32%;
}
.size-33 {
  width: 32%;
  margin-bottom: 2%;
}
.size-third {
  width: 32%;
}

.size-25, .size-quarter {
  width: 24%;
}
.size-20 {
  width: 19%;
}
.size-sixth {
  width: 15%;
}


.card-join h2 {
  margin: 0 0 0.5rem 0;
}
/* ... */

